<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PicEditorActivity">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btBrush"
                    style="@style/ButtonStyle"
                    android:drawableTop="@drawable/ic_brush"
                    android:text="@string/brush" />
                <Button
                    android:id="@+id/btEraser"
                    style="@style/ButtonStyle"
                    android:drawableTop="@drawable/ic_eraser"
                    android:text="@string/eraser"/>
                <Button
                    android:id="@+id/btUndo"
                    style="@style/ButtonStyle"
                    android:drawableTop="@drawable/ic_undo"
                    android:text="@string/undo"/>
                <Button
                    android:id="@+id/btRedo"
                    style="@style/ButtonStyle"
                    android:drawableTop="@drawable/ic_redo"
                    android:text="@string/redo"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>