<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/opacity"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/sb_opacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:progressBackgroundTint="@color/black"
        android:progressTint="@color/black"
        android:thumbTint="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvOpacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        android:paddingHorizontal="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/size" />

    <SeekBar
        android:id="@+id/sb_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:progressBackgroundTint="@color/black"
        android:progressTint="@color/black"
        android:thumbTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingHorizontal="10dp" />

    <Button
        android:id="@+id/btDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/done" />
</LinearLayout>